# django-rest-framework-tutorial

./: .gitignore  README.md  pyproject.toml
apps/snippets/: models.py  serializers.py  urls.py  views.py
apps/snippets/migrations/: 0001_initial.py
apps/users/: serializers.py  urls.py  views.py
config/: settings.py  urls.py
