[tool.poetry]
name = "django-rest-framework-tutorial"
version = "0.1.0"
description = ""
authors = ["oguzhanoxel <oguzhanoksel@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.7"
djangorestframework = "^3.12.2"
Pygments = "^2.8.1"
pylint = "^2.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
